# Data-Lakes-tp1-student

./: .gitignore  README.md  data_analysis.ipynb  pyproject.toml
src/: preprocess.py
